--- a/index.html
+++ b/index.html
@@ -31,8 +31,18 @@
 
             </div>
         </div>
+        <section>
 
- 
+        <form class="search-form">
+            <input type="text" class="search" placeholder="City or State">
+            <ul class="suggestions">
+              <li>Filter for a city</li>
+              <li>or a state</li>
+            </ul>
+          </form>
+
+        </section>
+
             <!-- Optional JavaScript -->
             <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 
