add population growth

--- a/index.html
+++ b/index.html
@@ -35,9 +35,14 @@
 
         <form class="search-form">
             <input type="text" class="search" placeholder="City or State">
+            <ul class="suggestions1">
+                <li> <pre>City, State     Populaton  Growth rate </pre></li>
+                </ul>
+  
             <ul class="suggestions">
               <li>Filter for a city</li>
               <li>or a state</li>
+
             </ul>
           </form>
 
